Сверстали страницу объявления со слайдером

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
             <h2 class="page-title">Рекомендации для вас</h2>
             <div class="cards">
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image.jpg" alt="photo" class="card-image">
                     </a>
 
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Электросамокат</h3>
                         </a>
                         <button class="like">
@@ -87,12 +87,12 @@
                 </div>
                 <!-- /.card -->
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image2.jpg" alt="photo" class="card-image">
                     </a>
 
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Пвх материал 2й сорт</h3>
                         </a>
                         <button class="like">
@@ -107,12 +107,12 @@
                 </div>
                 <!-- /.card -->
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image3.jpg" alt="photo" class="card-image">
                     </a>
 
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Двухсторонняя ветровка для мальчика</h3>
                         </a>
                         <button class="like">
@@ -127,12 +127,12 @@
                 </div>
                 <!-- /.card -->
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image4.jpg" alt="photo" class="card-image">
                     </a>
 
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Пеленальная доска на комод</h3>
                         </a>
                         <button class="like">
@@ -147,12 +147,12 @@
                 </div>
                 <!-- /.card -->
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image5.jpg" alt="photo" class="card-image">
                     </a>
 
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Участок 8 сот. (ИЖС)</h3>
                         </a>
                         <button class="like">
@@ -167,12 +167,12 @@
                 </div>
                 <!-- /.card -->
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image6.jpg" alt="photo" class="card-image">
                     </a>
 
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Ford Fusion, 2007</h3>
                         </a>
                         <button class="like">
